自己紹介と職歴追加

--- a/index.html
+++ b/index.html
@@ -37,39 +37,50 @@
             <!-- <nav id="sidebar"></nav>必要に応じて -->
             <main>
                 <div id="main-wrapper">
-    
                     <section id="section1">
-                        <div class="content-wrapper" :style="video1Style">
+                        <div class="content-wrapper">
                             <div class="container">
                                 <div class="content-container">
-                                    <table style="width: 100%; max-width: 700px" class="sm">
-                                        <div class="h2 fw-bold text-center mb-1">大会概要</div>
-                                        <thead>
+                                    <table class="tbl-r02" style="width: 100%; max-width: 700px" class="sm">
+                                        <div class="h2 fw-bold text-center mb-1">自己紹介</div></div></div>
+                                        <!-- <thead>
                                             <div class="text-center xxxxlg pb-2 fw-bold">「Apex Legends Legion Doujou Cup #5 プロアマ大会編」とは</div>
                                             <div class="xxxlg text-left ma  w-100" style="margin-bottom: 30px; max-width: 630px">レノボ・ジャパンが主催するPC版「Apex Legends」のオンライン大会です。<br>
                                             本大会は1日間で完結する大会となっており、全3回の開催を予定しております。
                                             </div>
-                                        </thead>
+                                        </thead> -->
                                         <tbody>
                                             <tr class="mb-2">
-                                                <th valign="top" class="text-left xxxxlg w25 pb-3 pr-5">募集チーム数</th>
-                                                <td class="xxxxlg pb-3">40チーム（1チーム3名＋リザーブ1名）<br>※定員を超えた場合は抽選となります。</td>
+                                                <th valign="top" class="text-left xxxxlg w25 pb-3 pr-5">名前</th>
+                                                <td class="xxxxlg pb-3">井上領</td>
                                             </tr>
                                             <tr>
-                                                <th valign="top" class="text-left xxxxlg w25 pb-3 pr-5">大会形式 </th>
-                                                <td class="xxxxlg pb-3">40チームを20チームずつ2グループに分けて予選を実施<br>各グループ上位10チームが決勝へ進出</td>
+                                                <th valign="top" class="text-left xxxxlg w25 pb-3 pr-5">生年月日</th>
+                                                <td class="xxxxlg pb-3">1990年 9月 8日 30歳</td></td>
                                             </tr>
                                             <tr>
-                                                <th valign="top" class="text-left xxxxlg w25 pb-3 pr-5">賞金</th>
-                                                <td class="xxxxlg pb-3">優勝：15万円　2位：6万円　3位：3万円</td>
+                                                <th valign="top" class="text-left xxxxlg w25 pb-3 pr-5">現住所</th>
+                                                <td class="xxxxlg pb-3">〒156-0043 東京都世田谷区松原1-43-14 メゾン松原102号</td>
                                             </tr>
                                             <tr>
-                                                <th valign="top" class="text-left xxxxlg w25 pb-3 pr-5">主催</th>
-                                                <td class="xxxxlg pb-3">レノボ・ジャパン合同会社</td>
+                                                <th valign="top" class="text-left xxxxlg w25 pb-3 pr-5">電話番号</th>
+                                                <td class="xxxxlg pb-3">070-8338-1624</td>
                                             </tr>
                                             <tr>
-                                                <th valign="top" class="text-left xxxxlg w25 pb-3 pr-5">運営</th>
-                                                <td class="xxxxlg pb-3">株式会社テクノブラッド</td>
+                                                <th valign="top" class="text-left xxxxlg w25 pb-3 pr-5">最終学歴</th>
+                                                <td class="xxxxlg pb-3">2011年 福岡大学工学部化学システム工学科卒業</td>
+                                            </tr>
+                                            <tr>
+                                                <th valign="top" class="text-left xxxxlg w25 pb-3 pr-5">言語</th>
+                                                <td class="xxxxlg pb-3">html, css, javascript, php</td></td>
+                                            </tr>
+                                            <tr>
+                                                <th valign="top" class="text-left xxxxlg w25 pb-3 pr-5">フレームワーク</th>
+                                                <td class="xxxxlg pb-3">Vue.js, Laravel</td>
+                                            </tr>
+                                            <tr class="last">
+                                                <th valign="top" class="text-left xxxxlg w25 pb-3 pr-5">趣味・特技</th>
+                                                <td class="xxxxlg pb-3"></td>
                                             </tr>
                                         </tbody>
                                     </table>
@@ -81,34 +92,54 @@
                         <div class="content-wrapper" :style="video1Style"><div class="header-bg2"></div>
                             <div class="container">
                                 <div class="content-container">
-                                    <table style="width: 100%; max-width: 700px" class="sm">
-                                        <div class="h2 fw-bold text-center mb-1">大会概要</div>
+                                    <table class="" style="width: 100%; max-width: 700px" class="sm">
+                                        <div class="h2 fw-bold text-center mb-1">学歴・職歴</div>
                                         <thead>
-                                            <div class="text-center xxxxlg pb-2 fw-bold">「Apex Legends Legion Doujou Cup #5 プロアマ大会編」とは</div>
-                                            <div class="xxxlg text-left ma  w-100" style="margin-bottom: 30px; max-width: 630px">レノボ・ジャパンが主催するPC版「Apex Legends」のオンライン大会です。<br>
-                                            本大会は1日間で完結する大会となっており、全3回の開催を予定しております。
-                                            </div>
+                                            <div class="text-center xxxxlg pb-2 fw-bold">学歴</div>
                                         </thead>
                                         <tbody>
                                             <tr class="mb-2">
-                                                <th valign="top" class="text-left xxxxlg w25 pb-3 pr-5">募集チーム数</th>
-                                                <td class="xxxxlg pb-3">40チーム（1チーム3名＋リザーブ1名）<br>※定員を超えた場合は抽選となります。</td>
+                                                <th valign="top" class="text-left xxxxlg w25 pb-3 pr-1">平成18年 3月</th>
+                                                <td class="xxxxlg pb-3 pl-1">福岡市立多々良中央中学校 卒業</td>
                                             </tr>
                                             <tr>
-                                                <th valign="top" class="text-left xxxxlg w25 pb-3 pr-5">大会形式 </th>
-                                                <td class="xxxxlg pb-3">40チームを20チームずつ2グループに分けて予選を実施<br>各グループ上位10チームが決勝へ進出</td>
+                                                <th valign="top" class="text-left xxxxlg w25 pb-3 pr-1">平成18年 4月</th>
+                                                <td class="xxxxlg pb-3 pl-1">私立九州産業大学付属九州高等学校 入学</td>
                                             </tr>
                                             <tr>
-                                                <th valign="top" class="text-left xxxxlg w25 pb-3 pr-5">賞金</th>
-                                                <td class="xxxxlg pb-3">優勝：15万円　2位：6万円　3位：3万円</td>
+                                                <th valign="top" class="text-left xxxxlg w25 pb-3 pr-1">平成21年 3月</th>
+                                                <td class="xxxxlg pb-3 pl-1">私立九州産業大学付属九州高等学校 卒業</td>
                                             </tr>
                                             <tr>
-                                                <th valign="top" class="text-left xxxxlg w25 pb-3 pr-5">主催</th>
-                                                <td class="xxxxlg pb-3">レノボ・ジャパン合同会社</td>
+                                                <th valign="top" class="text-left xxxxlg w25 pb-3 pr-1">平成21年 4月</th>
+                                                <td class="xxxxlg pb-3 pl-1">私立福岡大学工学部科学システム工学科 入学</td>
                                             </tr>
                                             <tr>
-                                                <th valign="top" class="text-left xxxxlg w25 pb-3 pr-5">運営</th>
-                                                <td class="xxxxlg pb-3">株式会社テクノブラッド</td>
+                                                <th valign="top" class="text-left xxxxlg w25 pb-3 pr-1">平成25年 3月</th>
+                                                <td class="xxxxlg pb-3 pl-1">私立福岡大学工学部科学システム工学科 卒業</td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                    <table class="" style="width: 100%; max-width: 700px" class="sm">
+                                        <thead>
+                                            <div class="text-center xxxxlg pb-2 fw-bold">職歴</div>
+                                        </thead>
+                                        <tbody>
+                                            <tr class="mb-2">
+                                                <th valign="top" class="text-left xxxxlg w25 pb-3 pr-1">平成28年 7月</th>
+                                                <td class="xxxxlg pb-3 pl-1">有限会社 ジェイホッパーズ 入社</td>
+                                            </tr>
+                                            <tr>
+                                                <th valign="top" class="text-left xxxxlg w25 pb-3 pr-1">令和2年 2月</th>
+                                                <td class="xxxxlg pb-3 pl-1">一身上の都合により退職</td>
+                                            </tr>
+                                            <tr>
+                                                <th valign="top" class="text-left xxxxlg w25 pb-3 pr-1">令和2年 8月</th>
+                                                <td class="xxxxlg pb-3 pl-1">株式会社 shiftkey 入社</td>
+                                            </tr>
+                                            <tr>
+                                                <th valign="top" class="text-left xxxxlg w25 pb-3 pr-1">令和3年 2月</th>
+                                                <td class="xxxxlg pb-3 pl-1">現在に至る　以上</td>
                                             </tr>
                                         </tbody>
                                     </table>
@@ -118,7 +149,7 @@
                     </section>
                 </div>
             </main>
-        </div>
+        </div><button class="page-btn" @click="scrollTop()"></button>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
     <script>
@@ -158,8 +189,59 @@ var app = new Vue({
         onResize () {
             this.windowSize = { x: window.innerWidth, y: window.innerHeight }
         },
+        scrollTop: function(){
+            window.scrollTo({
+                top: 0,
+                behavior: "smooth"
+            });
+        }
     }
 })
     </script>
+    <!-- smooth・instant・auto -->
+    <style>
+        .page-btn{
+            position: fixed;
+            right: 14px;
+            bottom: 14px;
+            width: 32px;
+            height: 32px;
+            line-height: 32px;
+            text-align: center;
+            border-radius: 50%;
+            background: #5bc8ac;
+        }
+        p {
+            font-size: 16px;
+            font-weight: bold;
+            text-align: center;
+            margin: 60px auto 40px;
+        }
+        .tbl-r02 th {
+            background: #ff00193f;
+            border: solid 1px #ccc;
+            color: #fff;
+            padding: 10px;
+        }
+        .tbl-r02 td {
+            border: solid 1px #ccc;
+            padding: 10px;
+        }
+        @media screen and (max-width: 640px) {
+            .last td:last-child {
+                border-bottom: solid 1px #ccc;
+                width: 100%;
+            }
+            .tbl-r02 {
+                width: 80%;
+            }
+            .tbl-r02 th,
+            .tbl-r02 td {
+            　　border-bottom: none;
+                display: block;
+                width: 100%;
+            }
+        }
+    </style>
 </body>
 </html>
