--- a/index.html
+++ b/index.html
@@ -15,23 +15,28 @@
                     <video id="video2" class="header-bg3" src="img/02.mp4" autoplay muted loop playsinline></video>
                     <video id="video1" class="header-bg" src="img/01.mp4" autoplay muted loop playsinline  :style="video1Style"></video>
                     <div class="header-bg2"></div>
-                    <!-- <nav id="mainbar">
+                    <div style="position: absolute;top: 0;">
                         <div class="container1">
                             <div class="flex">
-                            <div id="header-left">
-                                <div>My Portfolio</div>
-                                <ul class="flex">
-                                    <li><a href="#section1"></a></li>
-                                    <li><a href="#section2"></a></li>
-                                    <li><a href="#section3"></a></li>
-                                    <li><a href="#section4"></a></li>
-                                    <li><a href="#section5"></a></li>
-                                </ul>
-                            </div>
-                            <div id="header-right"></div>
+                                <div id="header-left">
+                                    <div style="max-width: 500px;width: 100%;">
+                                        <img src="img/05.png" alt="my portfolio">
+                                    </div>
+                                </div>
+                                <div id="header-right" style="max-width: 1300px; width: 100%; min-width: 100px;"></div>
                             </div>
                         </div>
-                    </nav> -->
+                        <nav id="mainbar">
+                            <ul class="flex">
+                                <li><a href="#section1">自己紹介</a></li>
+                                <li><a href="#section2">学歴・職歴</a></li>
+                                <li><a href="#section3">職務経歴</a></li>
+                                <li><a href="#section4"></a></li>
+                                <li><a href="#section5"></a></li>
+                            </ul>
+                        </nav>
+                        <div>Let me introduce myself through my website</div>
+                    </div>
                 </div>
             </header>
             <!-- <nav id="sidebar"></nav>必要に応じて -->
@@ -98,6 +103,109 @@
                                             <div class="text-center xxxxlg pb-2 fw-bold">学歴</div>
                                         </thead>
                                         <tbody>
+                                            <tr class="mb-2">
+                                                <th valign="top" class="text-left xxxxlg w25 pb-3 pr-1">平成18年 3月</th>
+                                                <td class="xxxxlg pb-3 pl-1">福岡市立多々良中央中学校 卒業</td>
+                                            </tr>
+                                            <tr>
+                                                <th valign="top" class="text-left xxxxlg w25 pb-3 pr-1">平成18年 4月</th>
+                                                <td class="xxxxlg pb-3 pl-1">私立九州産業大学付属九州高等学校 入学</td>
+                                            </tr>
+                                            <tr>
+                                                <th valign="top" class="text-left xxxxlg w25 pb-3 pr-1">平成21年 3月</th>
+                                                <td class="xxxxlg pb-3 pl-1">私立九州産業大学付属九州高等学校 卒業</td>
+                                            </tr>
+                                            <tr>
+                                                <th valign="top" class="text-left xxxxlg w25 pb-3 pr-1">平成21年 4月</th>
+                                                <td class="xxxxlg pb-3 pl-1">私立福岡大学工学部科学システム工学科 入学</td>
+                                            </tr>
+                                            <tr>
+                                                <th valign="top" class="text-left xxxxlg w25 pb-3 pr-1">平成25年 3月</th>
+                                                <td class="xxxxlg pb-3 pl-1">私立福岡大学工学部科学システム工学科 卒業</td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                    <table class="" style="width: 100%; max-width: 700px" class="sm">
+                                        <thead>
+                                            <div class="text-center xxxxlg pb-2 fw-bold">職歴</div>
+                                        </thead>
+                                        <tbody>
+                                            <tr class="mb-2">
+                                                <th valign="top" class="text-left xxxxlg w25 pb-3 pr-1">平成28年 7月</th>
+                                                <td class="xxxxlg pb-3 pl-1">有限会社 ジェイホッパーズ 入社</td>
+                                            </tr>
+                                            <tr>
+                                                <th valign="top" class="text-left xxxxlg w25 pb-3 pr-1">令和2年 2月</th>
+                                                <td class="xxxxlg pb-3 pl-1">一身上の都合により退職</td>
+                                            </tr>
+                                            <tr>
+                                                <th valign="top" class="text-left xxxxlg w25 pb-3 pr-1">令和2年 8月</th>
+                                                <td class="xxxxlg pb-3 pl-1">株式会社 shiftkey 入社</td>
+                                            </tr>
+                                            <tr>
+                                                <th valign="top" class="text-left xxxxlg w25 pb-3 pr-1">令和3年 2月</th>
+                                                <td class="xxxxlg pb-3 pl-1">現在に至る　以上</td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+                    <section id="section3">
+                        <div class="content-wrapper" :style="video1Style"><div class="header-bg2"></div>
+                            <div class="container">
+                                <div class="content-container">
+                                    <table class="" style="width: 100%; max-width: 700px" class="sm">
+
+                                        <thead>
+                                            <div class="text-center xxxxlg pb-2 fw-bold">PCスキル</div>
+                                        </thead>
+                                        <tbody>
+                                            <tr>
+                                                <th scope="col" colspan="2">種類</th>
+                                                <th scope="col">試用期間</th>
+                                                <th scope="col">レベル</th></th>
+                                            </tr>
+                                            <tr>
+                                                <th scope="row" rowspan="2">O<br>S</th>
+                                                <th>Windows10</th>
+                                                <td>7ヶ月</td>
+                                                <td>7ヶ月</td>
+                                            </tr>
+                                            <tr>
+                                                <th>Linux</th>
+                                                <td>
+                                                    <ul class="disc">
+                                                        <li></li>
+                                                    </ul>
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <th scope="row" rowspan="3">言<br>語</th>
+                                                <th>Typescript</th>
+                                                <td>
+                                                    <ul class="disc">
+                                                        <li></li>
+                                                    </ul>
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <th>PHP</th>
+                                                <td>
+                                                    <ul class="disc">
+                                                        <li></li>
+                                                    </ul>
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <th>javascript</th>
+                                                <td>
+                                                    <ul class="disc">
+                                                        <li></li>
+                                                    </ul>
+                                                </td>
+                                            </tr>
                                             <tr class="mb-2">
                                                 <th valign="top" class="text-left xxxxlg w25 pb-3 pr-1">平成18年 3月</th>
                                                 <td class="xxxxlg pb-3 pl-1">福岡市立多々良中央中学校 卒業</td>
