--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <header>
                 <div id="header-wrapper">
                     <video id="video2" class="header-bg3" src="img/02.mp4" autoplay muted loop playsinline></video>
-                    <video id="video1" class="header-bg" src="img/01.mp4" autoplay muted loop playsinline  :style="video1Style"></video>
+                    <video id="video1" class="header-bg" src="img/01.mp4" autoplay muted loop playsinline :style="video1Style"></video>
                     <div class="header-bg2"></div>
                     <div style="position: absolute;top: 0;">
                         <div class="container1">
@@ -153,104 +153,177 @@
                         </div>
                     </section>
                     <section id="section3">
-                        <div class="content-wrapper" :style="video1Style"><div class="header-bg2"></div>
+                        <div class="content-wrapper">
                             <div class="container">
                                 <div class="content-container">
-                                    <table class="" style="width: 100%; max-width: 700px" class="sm">
-
+                                    <table id="skill" style="width: 100%; max-width: 700px" class="sm">
                                         <thead>
                                             <div class="text-center xxxxlg pb-2 fw-bold">PCスキル</div>
                                         </thead>
                                         <tbody>
                                             <tr>
-                                                <th scope="col" colspan="2">種類</th>
-                                                <th scope="col">試用期間</th>
-                                                <th scope="col">レベル</th></th>
+                                                <th colspan="2">種類</th>
+                                                <th>試用期間</th>
+                                                <th>レベル</th></th>
                                             </tr>
                                             <tr>
-                                                <th scope="row" rowspan="2">O<br>S</th>
+                                                <th style="text-align: center;" scope="row" rowspan="2">O<br>S</th>
                                                 <th>Windows10</th>
                                                 <td>7ヶ月</td>
-                                                <td>7ヶ月</td>
+                                                <td></td>
                                             </tr>
                                             <tr>
                                                 <th>Linux</th>
-                                                <td>
-                                                    <ul class="disc">
-                                                        <li></li>
-                                                    </ul>
-                                                </td>
+                                                <td>7ヶ月</td>
+                                                <td></td>
                                             </tr>
                                             <tr>
-                                                <th scope="row" rowspan="3">言<br>語</th>
-                                                <th>Typescript</th>
-                                                <td>
-                                                    <ul class="disc">
-                                                        <li></li>
-                                                    </ul>
-                                                </td>
+                                                <th style="text-align: center;" scope="row" rowspan="3">言<br>語</th>
+                                                <th>javascript</th>
+                                                <td>10ヶ月</td>
+                                                <td></td>
                                             </tr>
                                             <tr>
                                                 <th>PHP</th>
-                                                <td>
-                                                    <ul class="disc">
-                                                        <li></li>
-                                                    </ul>
-                                                </td>
+                                                <td>8ヶ月</td>
+                                                <td></td>
                                             </tr>
                                             <tr>
-                                                <th>javascript</th>
-                                                <td>
-                                                    <ul class="disc">
-                                                        <li></li>
-                                                    </ul>
-                                                </td>
-                                            </tr>
-                                            <tr class="mb-2">
-                                                <th valign="top" class="text-left xxxxlg w25 pb-3 pr-1">平成18年 3月</th>
-                                                <td class="xxxxlg pb-3 pl-1">福岡市立多々良中央中学校 卒業</td>
+                                                <th>Typescript</th>
+                                                <td>3ヶ月</td>
+                                                <td></td>
                                             </tr>
                                             <tr>
-                                                <th valign="top" class="text-left xxxxlg w25 pb-3 pr-1">平成18年 4月</th>
-                                                <td class="xxxxlg pb-3 pl-1">私立九州産業大学付属九州高等学校 入学</td>
+                                                <th style="text-align: center;" scope="row" rowspan="6">フ<br>レ<br><span style="writing-mode: vertical-rl;">ー</span><br>ム<br>ワ<br><span style="writing-mode: vertical-rl;">ー</span><br>ク<br>・<br>ラ<br>イ<br>ブ<br>ラ<br>リ</th>
+                                                <th>Laravel</th>
+                                                <td>8ヶ月</td>
+                                                <td></td>
                                             </tr>
                                             <tr>
-                                                <th valign="top" class="text-left xxxxlg w25 pb-3 pr-1">平成21年 3月</th>
-                                                <td class="xxxxlg pb-3 pl-1">私立九州産業大学付属九州高等学校 卒業</td>
+                                                <th>Vue.js</th>
+                                                <td>4ヶ月</td>
+                                                <td></td>
                                             </tr>
                                             <tr>
-                                                <th valign="top" class="text-left xxxxlg w25 pb-3 pr-1">平成21年 4月</th>
-                                                <td class="xxxxlg pb-3 pl-1">私立福岡大学工学部科学システム工学科 入学</td>
+                                                <th>Vuetify</th>
+                                                <td>3ヶ月</td>
+                                                <td></td>
                                             </tr>
                                             <tr>
-                                                <th valign="top" class="text-left xxxxlg w25 pb-3 pr-1">平成25年 3月</th>
-                                                <td class="xxxxlg pb-3 pl-1">私立福岡大学工学部科学システム工学科 卒業</td>
+                                                <th>Vue Router</th>
+                                                <td>1ヶ月</td>
+                                                <td></td>
                                             </tr>
+                                            <tr>
+                                                <th>Vuex</th>
+                                                <td>1ヶ月</td>
+                                                <td></td>
+                                            </tr>
+                                            <tr>
+                                                <th>jQuery</th>
+                                                <td>2ヶ月</td>
+                                                <td></td>
+                                            </tr>
+                                            <tr>
+                                                <th style="text-align: center;" scope="row" rowspan="6">ミ<br>ド<br>ル<br>ウ<br>ェ<br>ア<br><span style="writing-mode: vertical-rl;">、</span><br>サ<br><span style="writing-mode: vertical-rl;">ー</span><br>バ<br></th>
+                                                <th>MySQL</th>
+                                                <td>8ヶ月</td>
+                                                <td>簡単なテーブル作成が可能</td>
+                                            </tr>
+                                            <tr>
+                                                <th>Apache</th>
+                                                <td>4ヶ月</td>
+                                                <td></td>
+                                            </tr>
+                                            <tr>
+                                                <th>Cloud9</th>
+                                                <td>1ヶ月</td>
+                                                <td></td>
+                                            </tr>
+                                            <tr>
+                                                <th>EC2</th>
+                                                <td>1ヶ月</td>
+                                                <td></td>
+                                            </tr>
+                                            <tr>
+                                                <th>S3</th>
+                                                <td>1ヶ月</td>
+                                                <td></td>
+                                            </tr>
+                                            <tr>
+                                                <th>RDS</th>
+                                                <td>1ヶ月</td>
+                                                <td></td>
+                                            </tr>
+                                            <tr>
+                                                <th style="text-align: center;" scope="row" rowspan="4">バ<br><span style="writing-mode: vertical-rl;">ー</span><br>ジ<br>ョ<br>ン<br>管<br>理</th>
+                                                <th>Git</th>
+                                                <td>3ヶ月</td>
+                                                <td></td>
+                                              </tr>
+                                              <tr>
+                                                <th>Git Hub</th>
+                                                <td>10ヶ月</td>
+                                                <td></td>
+                                              </tr>
+                                              <tr>
+                                                <th>Source Tree</th>
+                                                <td>5ヶ月</td>
+                                                <td></td>
+                                              </tr>
+                                              <tr>
+                                                <th>Bit bucket</th>
+                                                <td>3ヶ月</td>
+                                                <td></td>
+                                              </tr>
                                         </tbody>
                                     </table>
-                                    <table class="" style="width: 100%; max-width: 700px" class="sm">
-                                        <thead>
-                                            <div class="text-center xxxxlg pb-2 fw-bold">職歴</div>
-                                        </thead>
-                                        <tbody>
-                                            <tr class="mb-2">
-                                                <th valign="top" class="text-left xxxxlg w25 pb-3 pr-1">平成28年 7月</th>
-                                                <td class="xxxxlg pb-3 pl-1">有限会社 ジェイホッパーズ 入社</td>
-                                            </tr>
-                                            <tr>
-                                                <th valign="top" class="text-left xxxxlg w25 pb-3 pr-1">令和2年 2月</th>
-                                                <td class="xxxxlg pb-3 pl-1">一身上の都合により退職</td>
-                                            </tr>
-                                            <tr>
-                                                <th valign="top" class="text-left xxxxlg w25 pb-3 pr-1">令和2年 8月</th>
-                                                <td class="xxxxlg pb-3 pl-1">株式会社 shiftkey 入社</td>
-                                            </tr>
-                                            <tr>
-                                                <th valign="top" class="text-left xxxxlg w25 pb-3 pr-1">令和3年 2月</th>
-                                                <td class="xxxxlg pb-3 pl-1">現在に至る　以上</td>
-                                            </tr>
-                                        </tbody>
-                                    </table>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+                    <section id="section4">
+                        <div class="content-wrapper" :style="video1Style"><div class="header-bg2"></div>
+                            <div class="container">
+                                <div class="content-container">
+                                    <h3>ログインページ</h3>
+                                    <ul>
+                                        <li>認証</li>
+                                        <li>会員登録</li>
+                                        <!-- <li>ヴァリデーション</li>
+                                        <li>Ajax通信</li>
+                                        <li>queue、job、work</li> -->
+                                    </ul>
+                                    <h3>メインページ</h3>
+                                    <ul>
+                                        <li>いいね</li>
+                                        <li>いいね閲覧</li>
+                                        <li>コメント</li>
+                                        <li>コメント閲覧</li>
+                                        <li>自分の投稿閲覧</li>
+                                        <li>フォロワーの投稿</li>
+                                        <li>友達検索</li>
+                                    </ul>
+                                    <h3>投稿ページ</h3>
+                                    <ul>
+                                        <li>写真のリサイズ</li>
+                                        <li>描画</li>
+                                        <li>フィルター</li>
+                                        <li>保存</li></li>
+                                    </ul>
+                                    <h3>プロフィールページ</h3>
+                                    <ul>
+                                        <li>いいね</li>
+                                        <li>いいね閲覧</li>
+                                        <li>コメント</li>
+                                        <li>コメント閲覧</li>
+                                        <li>自分の投稿閲覧</li>
+                                        <li>投稿写真の削除</li>
+                                        <li>フォロワー閲覧</li>
+                                        <li>プロフィール写真変更</li>
+                                        <li>アバター写真変更</li>
+                                        <li>ユーザー情報変更</li>
+                                    </ul>
                                 </div>
                             </div>
                         </div>
@@ -260,52 +333,8 @@
         </div><button class="page-btn" @click="scrollTop()"></button>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
-    <script>
-var app = new Vue({
-    el: '#app',
-    data: {
-        video1: document.getElementById('video1'),
-        hueValue: 0,
-        windowSize: {
-        x: 0,
-        y: 0,
-      },
-    },
-    computed: {
-        video1Style(){
-            var video1Filter = this.video1.style.filter;
-            video1Filter = `hue-rotate(${this.hueValue}deg)`;
-            var style = `filter: ${video1Filter}`;
-            return style;
-        }
-    },
-    mounted(){
-        var that = this;
-		setInterval(function() {
-            if(that.hueValue>359){
-                that.hueValue = 0;
-            } else {
-                that.hueValue = that.hueValue + 1;
-            }
-        }, 70);
-        window.addEventListener('resize', this.onResize)
-    },
-    beforeDestroy() {
-        window.removeEventListener('resize', this.onResize)
-    },
-    methods: {
-        onResize () {
-            this.windowSize = { x: window.innerWidth, y: window.innerHeight }
-        },
-        scrollTop: function(){
-            window.scrollTo({
-                top: 0,
-                behavior: "smooth"
-            });
-        }
-    }
-})
-    </script>
+    <script src="js/app.js"></script>
+
     <!-- smooth・instant・auto -->
     <style>
         .page-btn{
@@ -333,6 +362,19 @@ var app = new Vue({
         }
         .tbl-r02 td {
             border: solid 1px #ccc;
+            padding: 10px;
+        }
+        #skill th {
+            background: #5900ff3f;
+            border: solid 1px #ccc;
+            color: #fff;
+            padding: 10px;
+        }
+        #skill td {
+            border: solid 1px #ccc;
+            padding: 10px;
+        }
+        table {
             padding: 10px;
         }
         @media screen and (max-width: 640px) {
