メインビジュアル調整

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                             <div class="header-bg2"></div>
                             <div style="width: 100%;">
                                 <div class="container1" style="position: absolute;top: 0;width: 100%;margin-bottom: 5%;">
-                                    <div class="flex wrap mb-8" style="padding: 40px 40px;">
+                                    <div class="flex wrap mb-8" style="padding: 4%;">
                                         <div id="header-left" class="mb-8">
                                             <div style="max-width: 300px;width: 100%;">
                                                 <transition name="name">
@@ -106,8 +106,6 @@
                                                     </tr>
                                                 </tbody>
                                             </table>
-                                        </div>
-                                    </div>
                                 </div>
                             </section>
                             <section id="section2">
